@@ -60,10 +60,11 @@ import static net.sourceforge.argparse4j.impl.Arguments.store;
  */
 public class EndToEndLatency {
 
+    private final static long POLL_TIMEOUT_MS = 60000;
+
     public static void main(String... args) {
         Exit.exit(mainNoExit(args));
     }
-    private final static long TIMEOUT = 60000;
 
     static int mainNoExit(String... args) {
         try {
@@ -81,9 +82,7 @@ public class EndToEndLatency {
 
     // Visible for testing
     static void execute(String... args) throws Exception {
-
         ArgumentParser parser = addArguments();
-
         Namespace res = null;
         try {
             res = parser.parseArgs(args);
@@ -96,7 +95,6 @@ public class EndToEndLatency {
                 Exit.exit(1);
             }
         }
-
         String brokers = res.getString("broker_list");
         String topic = res.getString("topic");
         int numMessages = res.getInt("num_messages");
@@ -135,7 +133,7 @@ public class EndToEndLatency {
                 long begin = System.nanoTime();
                 //Send message (of random bytes) synchronously then immediately poll for it
                 producer.send(new ProducerRecord<>(topic, message)).get();
-                ConsumerRecords<byte[], byte[]> records = consumer.poll(Duration.ofMillis(TIMEOUT));
+                ConsumerRecords<byte[], byte[]> records = consumer.poll(Duration.ofMillis(POLL_TIMEOUT_MS));
                 long elapsed = System.nanoTime() - begin;
 
                 validate(consumer, message, records);
@@ -151,45 +149,37 @@ public class EndToEndLatency {
             printResults(numMessages, totalTime, latencies);
             consumer.commitSync();
         }
-
     }
 
     static ArgumentParser addArguments() {
-
         ArgumentParser parser = ArgumentParsers
                 .newArgumentParser("end-to-end-latency")
                 .defaultHelp(true)
                 .description("This tool records the average end to end latency for a single message to travel through Kafka");
-
-
         parser
                 .addArgument("-b", "--brokers")
                 .action(store())
                 .type(String.class)
                 .dest("broker_list")
                 .help("The location of the bootstrap broker for both the producer and the consumer");
-
         parser
                 .addArgument("-t", "--topic")
                 .action(store())
                 .type(String.class)
                 .dest("topic")
                 .help("The Kakfa topic to send/receive messages to/from");
-
         parser
                 .addArgument("-n", "--num-records")
                 .action(store())
                 .type(Integer.class)
                 .dest("num_messages")
                 .help("The number of messages to send");
-
         parser
                 .addArgument("-a", "--acks")
                 .action(store())
                 .type(String.class)
                 .dest("producer_acks")
                 .help("The number of messages to send");
-
         parser
                 .addArgument("-s", "--message-bytes")
                 .required(true)
@@ -197,13 +187,11 @@ public class EndToEndLatency {
                 .type(Integer.class)
                 .dest("message_size_bytes")
                 .help("Size of each message in bytes");
-
         parser
                 .addArgument("-f", "--properties-file")
                 .action(store())
                 .type(String.class)
                 .dest("properties_file");
-
         return parser;
     }
 
@@ -211,7 +199,7 @@ public class EndToEndLatency {
     static void validate(KafkaConsumer<byte[], byte[]> consumer, byte[] message, ConsumerRecords<byte[], byte[]> records) {
         if (records.isEmpty()) {
             consumer.commitSync();
-            throw new RuntimeException("poll() timed out before finding a result (timeout:[" + TIMEOUT + "])");
+            throw new RuntimeException("poll() timed out before finding a result (timeout:[" + POLL_TIMEOUT_MS + "])");
         }
 
         //Check result matches the original record
@@ -242,7 +230,7 @@ public class EndToEndLatency {
     }
 
     private static void printResults(int numMessages, double totalTime, long[] latencies) {
-        System.out.printf("Avg latency: %.4f ms\n", totalTime / numMessages / 1000.0 / 1000.0);
+        System.out.printf("Avg latency: %.4f ms%n", totalTime / numMessages / 1000.0 / 1000.0);
         Arrays.sort(latencies);
         int p50 = (int) latencies[(int) (latencies.length * 0.5)];
         int p99 = (int) latencies[(int) (latencies.length * 0.99)];
@@ -252,7 +240,7 @@ public class EndToEndLatency {
 
     private static byte[] randomBytesOfLen(Random random, int length) {
         byte[] randomBytes = new byte[length];
-        Arrays.fill(randomBytes, new Integer(random.nextInt(26) + 65).byteValue());
+        Arrays.fill(randomBytes, Integer.valueOf(random.nextInt(26) + 65).byteValue());
         return randomBytes;
     }
 
@@ -279,12 +267,11 @@ public class EndToEndLatency {
     }
 
     private static Properties loadPropsWithBootstrapServers(String propertiesFile) throws IOException {
-        Properties properties = propertiesFile != null ? Utils.loadProps(propertiesFile) : new Properties();
-        return properties;
+        return propertiesFile != null ? Utils.loadProps(propertiesFile) : new Properties();
     }
 
     private static KafkaConsumer<byte[], byte[]> createKafkaConsumer(Properties properties, String brokers) {
-        Properties consumerProps = properties;
+        Properties consumerProps = new Properties(properties);
         consumerProps.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, brokers);
         consumerProps.put(ConsumerConfig.GROUP_ID_CONFIG, "test-group-" + System.currentTimeMillis());
         consumerProps.put(ConsumerConfig.ENABLE_AUTO_COMMIT_CONFIG, "false");
@@ -292,17 +279,19 @@ public class EndToEndLatency {
         consumerProps.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.ByteArrayDeserializer");
         consumerProps.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.ByteArrayDeserializer");
         consumerProps.put(ConsumerConfig.FETCH_MAX_WAIT_MS_CONFIG, "0"); //ensure we have no temporal batching
+        System.out.println(consumerProps);
         return new KafkaConsumer<>(consumerProps);
     }
 
     private static KafkaProducer<byte[], byte[]> createKafkaProducer(Properties properties, String acks, String brokers) {
-        Properties producerProps = properties;
+        Properties producerProps = new Properties(properties);
         producerProps.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, brokers);
         producerProps.put(ProducerConfig.LINGER_MS_CONFIG, "0"); //ensure writes are synchronous
         producerProps.put(ProducerConfig.MAX_BLOCK_MS_CONFIG, Long.MAX_VALUE);
         producerProps.put(ProducerConfig.ACKS_CONFIG, acks);
         producerProps.put(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.ByteArraySerializer");
         producerProps.put(ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.ByteArraySerializer");
+        System.out.println(producerProps);
         return new KafkaProducer<>(producerProps);
     }
 
